@@ -1,4 +1,4 @@
-<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KWord" version="86">
+<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KWord" version="87">
 <MenuBar>
  <Menu name="file"><text>&amp;File</text>
   <Action name="extra_template"/>
@@ -315,6 +315,7 @@
  <ActionList name="datatools"/>
  <Action name="ignore_all"/>
  <Action name="add_word_to_dictionary"/>
+ <ActionList name="spell_result_action"/>
 </Menu>
 <Menu name="custom_var_popup">
  <Action name="text_default"/>
